[gd_scene load_steps=3 format=3 uid="uid://brk1jqax3kafs"]

[ext_resource type="Script" path="res://assets/tools/mag glass/mag_glass.gd" id="2_cw5yx"]
[ext_resource type="Texture2D" uid="uid://4lshlaqtl4ye" path="res://assets/tools/mag glass/glass.png" id="2_mr4lt"]

[node name="MagGlass" type="TextureButton"]
z_index = 10
offset_right = 107.0
offset_bottom = 108.0
script = ExtResource("2_cw5yx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(53, 51)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_mr4lt")

[node name="Label" type="Label" parent="."]
modulate = Color(0.533333, 0.533333, 0.533333, 1)
layout_mode = 0
offset_left = 17.0
offset_top = 108.0
offset_right = 113.0
offset_bottom = 136.0
text = "mag glass"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
